# DL-YAFM

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  e2e-daily.yml  e2e.yml  test-frontend.yml  test-rust.yml  ui-scheduled.yml
e2e/: wdio.conf.ts
e2e/specs/: app.spec.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: config_commands.rs  file_commands.rs  mod.rs  plugin_commands.rs  watch_commands.rs
src-tauri/src/config/: config_manager.rs
src-tauri/src/models/: config_models.rs  file_entry.rs
src-tauri/src/plugin/: error.rs  host_functions.rs  manager.rs  mod.rs  models.rs  sandbox.rs
src/components/: TitleBar.tsx
src/components/bookmarks/: BookmarkList.tsx
src/components/dialogs/: CopyProgressDialog.tsx  DeleteConfirmDialog.tsx  NewFileDialog.tsx  NewFolderDialog.tsx  OverwriteConfirmDialog.tsx  RenameDialog.tsx  index.ts
src/components/file-browser/: FileBrowser.tsx  FileBrowserContextMenu.tsx
src/components/file-preview/: FilePreview.tsx  ImagePreview.tsx  MarkdownPreview.tsx  PdfPreview.tsx  index.ts
src/components/file-preview/markdown/: index.ts
src/components/file-preview/markdown/components/: FrontmatterDisplay.tsx  MermaidBlock.tsx
src/components/file-preview/markdown/styles/: callouts.css
src/components/file-preview/markdown/utils/: parse-frontmatter.ts  rehype-highlight-mark.ts
src/components/file-tree/: FileTree.tsx  TreeNode.tsx  TreeNodeContextMenu.tsx
src/components/search/: SearchBar.tsx
src/components/settings/: GlobalSettings.tsx  PluginSettings.tsx  SettingsDialog.tsx  ShortcutSettings.tsx  index.ts
src/components/ui/: dialog.tsx  progress.tsx  scroll-area.tsx
src/config/: shortcuts.ts
src/hooks/: useArrowKeyNavigation.ts  useHotkey.ts  useMarqueeSelection.ts
src/lib/: error.ts  utils.ts
src/services/: configService.ts  fileService.ts  index.ts  pluginService.ts
src/stores/: chatStore.ts  copyProgressStore.ts  editorStore.ts  fileTreeStore.ts  index.ts  pluginStore.ts  settingsStore.ts
src/test/: setup.ts
src/types/: file.ts  index.ts  plugin.ts  rehype-callouts.d.ts
src/utils/: migration.test.ts  migration.ts
