[package]
name = "dl-yafm"
version = "0.1.0"
description = "DL-YAFM - A File Explorer built with Tauri 2.0"
authors = ["Denny"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["plugin-system"]
plugin-system = ["wasmtime"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dl_yafm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio = { version = "1", features = ["fs", "sync", "time", "rt", "macros"] }
parking_lot = "0.12"
trash = "5"
notify = { version = "6", features = ["serde"] }

# Windows API for drive label (replaces slow wmic calls)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

# WASM 插件系统 (optional)
wasmtime = { version = "27", optional = true }
